# solve

./: .gitignore  ARCHITECTURE.md  README.md  lake-manifest.json  lakefile.lean  pyproject.toml  pytest.ini  setup.py
docs/findings/: FINDING_5c.md  FINDING_5d.md  FINDING_6a.md  FINDING_6b.md  FINDING_6c.md
experiments/: run0_nat_control.yaml  run1_list_basic_depth2.yaml
lean/Solve/Tools/: AtomDump.lean  (+4 more)
reproduce/: run0.sh  run1.sh
src/solve/: __init__.py  __main__.py  cli.py  loop.py  measure_shortening.py  promote.py
tests/: phase5a_helpers.py  test_and_intro_generator.py  test_atom_enumeration.py  test_atom_record_schema.py  test_check_imports.py  test_codegen.py  test_codegen_typed_operators.py  test_congr_arg_generator.py  test_downstream_used.py  test_eq_symm_generator.py  test_eq_trans_generator.py  test_grammar_dispatch.py  test_hardline.py  test_iff_intro_generator.py  test_iff_mp_generator.py  test_iff_mpr_generator.py  test_ingredient_triviality.py  test_lean_smoke.py  test_measure_shortening.py  test_novelty_batch.py  test_novelty_filter.py  test_novelty_global_oracle.py  test_operator_registry.py  test_phase6a_binder_filter_corpus_evidence.py  test_promote_cli.py  test_promote_empty_input.py  test_promote_novelty_refinement.py  test_promote_schema.py  test_promote_synthetic_replay.py  test_proof_size_probe.py  test_receipts.py  test_run_control_epoch1.py  test_run_control_receipts.py  test_run_control_smoke.py  test_spec.py  test_structural_packaging.py  test_triviality_classifier.py  test_type_directed.py  test_type_shape.py  test_usage_probe.py  (+2 more)
(+30 files in other folders)
