[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solve"
version = "0.1.0"
description = "Verifier-mediated bounded generation over Lean/mathlib."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2",
  "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
solve = "solve.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "lean: tests that execute the Lean toolchain",
]
